<?xml version="1.0" encoding="utf-8"?>
<resources>

   <string name="app_name">Image Effects</string>
   <string name="action_settings">Settings</string>
   <string name="hello_world">Hello world!</string>
   <string name="gray">Gray</string>
   <string name="sepia">Sepia</string>
   <string name="invert">Invert</string>
   <string name="emboss">Emboss</string>
	<string name="brightness">Brightness</string>
	<string name="sharpen">Sharpen</string>
	<string name="engrave">Engrave</string>
	<string name="smooth">Smooth</string>
	<string name="blur">Blur</string>
	<string name="snowy">Snowy</string>
	<string name="watermark">Watermark</string>
	<string name="contrast">Contrast</string>
	<string name="boost">Boost</string>
	<string name="saturation">Saturation</string>
	<string name="hue">Hue</string>
	<string name="reflection">Reflection</string>
	<string name="flea">Flea</string>
	<string name="Tint">Tint</string>
	<string name="gamma">Gama</string>
	<string name="mean">Mean</string>
	<string name="combine">Combine</string>
</resources>